gcp/task-013-traefik-whoami-tls-custom-certs/35-whoami-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-whoami
  namespace: default
spec:
  tls:
    certificates:
      - certFile: /var/ssl/start-domain-com-ssl/star_domain_com.chained.crt
        keyFile: /var/ssl/start-domain-com-ssl/star_domain.com.key
  entryPoints:
    - web
    - websecure
  routes:
  - match: PathPrefix(`/whoami-app-api`)
    kind: Rule
    services:
    - name: whoami
      port: 80
